--- a/hacid/.htaccess
+++ b/hacid/.htaccess
@@ -8,6 +8,7 @@ RewriteRule ^$ https://www.hacid-project.eu [R=303,L]
 RewriteRule ^sparql$ https://semantics.istc.cnr.it/hacid/sparql [R=303,L]
 RewriteRule ^sparql-ui(/?)$ https://semantics.istc.cnr.it/hacid/sparql-ui/ [R=303,L]
 RewriteRule ^cs/sparql$ https://keng.istc.cnr.it/hacid-cs-kg/sparql [R=303,L]
+RewriteRule ^cs(/?)$ https://hacid-project.github.io/cckg/ [R=303,L]
 
 RewriteRule ^data/cs(/.+)$ %{ENV:LODVIEW_CS_URL}$1$2 [R=303,L]
 RewriteRule ^(mdx|data)(/.+)$ %{ENV:LODVIEW_URL}$1$2 [R=303,L]
